Fixed spacing error for project elements

--- a/style.css
+++ b/style.css
@@ -115,7 +115,6 @@ body{
 .project {
     display:flex;
     align-items: center;
-    justify-content: space-around;
     flex-wrap: wrap;
 }
 
